# starter-cpp-project

./: CMakeCache.txt  CMakeLists.txt
src/: lab2vdo1  video2  video2.cpp  video3 basic calculator  video3 basic calculator.cpp  video3.cpp  video3_basic_calculator.cpp  video3_basic_calculator.cpp.cpp
